...
  // };

  const handleCancelPurchase = () => {
    setConfirmModalVisibility(false);
  };

  const toggleModalVisibility = () => {
    setIsModalVisible(visible => !visible);
  };

  const toggleKeyModalVisibility = () => {
    setIsKeyModalVisible(visible => !visible);
  };
...
      console.error('Error:', e);
    }
  };

  return (
    <View style={styles.container}>
      <Text style={styles.title}>eSIM Wallet app</Text>
      <View style={styles.separator} />
      {/* Modal for fetch QR */}
      <Button
        title="Fetch QR"
        onPress={() => fetchPngImage('purchaseaOrderRef')}
      />
...
            ) : (
              <Text style={styles.text}>Loading image ...</Text>
            )}
          </Modal.Body>
          <Modal.Footer>
            <Button
              title="Close"
              onPress={() => setIsImageModalVisible(false)}
            />
          </Modal.Footer>
        </Modal.Container>
      </Modal>
      {/* Modal for fetch Unique ID */}
      <Button title="Fetch Unique ID" onPress={toggleModalVisibility} />
      <Modal isVisible={isModalVisible}>
        <Modal.Container>
          <Modal.Header title="Device Data" />
          <Modal.Body>
            <Text style={styles.text}>{identifier}</Text>
          </Modal.Body>
          <Modal.Footer>
            <Button title="Back" onPress={toggleModalVisibility} />
          </Modal.Footer>
        </Modal.Container>
      </Modal>
      <Button title="Generate EC KeyPair" onPress={generateKeyStore} />
      <Modal isVisible={isKeyModalVisible}>
        <Modal.Container>
          <Modal.Header title="Master Keystore Address" />
          <Modal.Body>
            <Text style={styles.text}>{masterKeyStoreAddress}</Text>
          </Modal.Body>
          <Modal.Footer>
            <Button title="Back" onPress={toggleKeyModalVisibility} />
          </Modal.Footer>
...
              </Modal.Container>
            </Modal>
            <Button title="No" onPress={handleCancelPurchase} />
          </Modal.Footer>
        </Modal.Container>
      </Modal>
      <Button title="Catalogue" onPress={handleCataloguePress} />
      {/* Modal for displaying regions */}
      <Modal isVisible={isCatalogueModalVisible}>
        <Modal.Container>
          <Modal.Header title="REGIONS" />
          <Modal.Body>
            <TouchableOpacity style={styles.regionItem}>
              <Text>Global</Text>
            </TouchableOpacity>
            <TouchableOpacity style={styles.regionItem}>
              <Text>Antarctica</Text>
...
              onPress={() => setCatalogueModalVisibility(false)}
            />
          </Modal.Footer>
        </Modal.Container>
      </Modal>
      {/* Modal for fetching org details */}
      <Button title="Org" onPress={fetchOrgData} />
      <Modal isVisible={isOrgModalVisible}>
        <Modal.Container>
          <Modal.Header title="Organization Data" />
          <Modal.Body>
            <Text style={styles.text}>{JSON.stringify(orgData, null, 2)}</Text>
          </Modal.Body>
          <Modal.Footer>
            <Button title="Close" onPress={() => setIsOrgModalVisible(false)} />
          </Modal.Footer>
...
